[package]
name = "ntqq-antirecall-hook"
version.workspace = true
edition.workspace = true

[lib]
name = "NapCatWinBootHook"
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }
