[package]
name = "ntqq-antirecall-launcher"
version.workspace = true
edition.workspace = true

[[bin]]
name = "NapCatWinBootMain"
path = "src/main.rs"

[dependencies]
windows-sys = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }
